--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 - Add missings vanilla flags to the collection : ai_remnant, player_flag (1-3), lg, player_logo00_flag
 - Add support for Arma Armatura and Machina Void Shipyards
 - Add a vanilla only version with vanilla factions and custom player flags
+- Add version checker support
 
 2.0 (January 09, 2026)
 Zer0morph's original flags remain unchanged, but this new version features new mod support (see section in forum thread) and a new design philosophy that favours changing the black background to dark grey to avoid altering the colour patterns completely.
